--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@
   height: 100px;
   background-color: red;
   position: absolute;
+  text-transform: uppercase;
+  text-align: center;
+  vertical-align: middle;
+  color: blue;
+  border-style: solid;
+  border-width: 10px;
+  border-color: green;
+  font-family: sans-serif;
 }
 
 .second-box-container {
@@ -11,6 +19,14 @@
   background-color: yellow;
   left: 250px;
   position: absolute;
+  text-transform: uppercase;
+  text-align: center;
+  vertical-align: middle;
+  color: blue;
+  border-style: solid;
+  border-width: 10px;
+  border-color: red;
+  font-family: sans-serif;
 }
 
 .third-box-container {
@@ -19,4 +35,12 @@
   background-color: green;
   left: 500px;
   position: absolute;
+  text-transform: uppercase;
+  text-align: center;
+  color: blue;
+  border-style: solid;
+  border-width: 10px;
+  border-color: yellow;
+  font-family: sans-serif;
 }
+
